# vibehost-setup

./: .gitignore  CLAUDE.md  PRD.md  README.md  example-config.yaml  main.py  pyproject.toml
lib/: __init__.py  backups.py  config.py  containers.py  dev_setup.py  handoff.py  host.py  incus.py  network.py  postgres.py  ssh.py
templates/: handoff.md.j2
